--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 * {
-  font-size: 18px;
+  font-size: 16px;
   font-family: Arial, sans-serif;
   padding: 0;
   margin: 0;
@@ -12,46 +12,52 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 1200px;
   background-color: lavenderblush;
-  padding: 20px 300px;
-}
-.front .front__logo {
-  background-color: royalblue;
+  padding: 40px 300px;
 }
 .front .front__logo .logo__img {
-  height: 70px;
+  width: 119px;
 }
 .front .front__input-box {
   margin-left: 40px;
-  background-color: red;
-  display: flex;
-  justify-self: start;
 }
 .front .front__input-box .input-box__input {
   height: 50px;
-  width: 700px;
-  flex: 0 70%;
+  width: 650px;
 }
+.front .front__input-box input {
+  margin: 0 auto;
+  border: none;
+  /* <-- This thing here */
+  border: solid 1px #ccc;
+  border-radius: 10px;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
-  background-color: greenyellow;
   padding: 20px 40px;
+  min-width: 1200px;
 }
 nav .nav__category,
 nav .special-menu,
 nav .hash-tag,
 nav .add-on {
-  background-color: salmon;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+nav .hash-tag {
+  color: #888;
+  font-weight: 700;
 }
 nav .nav__category {
   flex-grow: 0.1;
 }
 nav .special-menu {
   flex-grow: 0.2;
+  font-weight: 700;
 }
 nav .hash-tag {
   flex-grow: 0.2;
@@ -70,21 +76,28 @@ nav .add-on .add-on__login li {
 }
 
 .main-banner {
-  background-color: rosybrown;
   position: relative;
-  padding: 0 40px;
+  margin: 40px;
+  display: flex;
+  justify-content: center;
+  font-size: 0;
+  min-width: 1200px;
+}
+.main-banner a {
+  font-size: 0;
 }
 .main-banner .main-banner__static {
-  background-color: yellow;
-  position: absolute;
-  display: inline-block;
+  border: 1px solid #ccc;
+}
+.main-banner .static__img1 {
+  margin: 0 40px;
+}
+.main-banner img {
+  display: block;
 }
 .main-banner .main-banner__slide {
-  background-color: red;
-  padding: 0 60px;
-  height: 340px;
+  border: 1px solid #ccc;
   width: 685px;
-  margin-left: 500px;
   overflow: hidden;
   position: relative;
 }
@@ -92,7 +105,6 @@ nav .add-on .add-on__login li {
   display: flex;
   position: absolute;
   justify-content: flex-start;
-  background-color: greenyellow;
   left: -585px;
 }
 .main-banner .main-banner__slide .slide-bundle li {
@@ -102,13 +114,19 @@ nav .add-on .add-on__login li {
 .main-banner .main-banner__slide .slide-bundle li:nth-child(3) {
   margin-right: 100px;
 }
-.main-banner .main-banner__slide .slide-bundle.active {
+.main-banner .main-banner__slide .slide-bundle.right {
   transform: translate3d(585px, 0, 0);
   transition: transform 0.5s;
 }
 .main-banner .main-banner__slide .slide-bundle.left {
   transform: translate3d(-585px, 0, 0);
   transition: transform 0.5s;
+}
+.main-banner .main-banner__slide .slide-bundle.over-right {
+  transform: translate3d(585px, 0, 0);
+}
+.main-banner .main-banner__slide .slide-bundle.over-left {
+  transform: translate3d(-585px, 0, 0);
 }
 .main-banner .main-banner__slide .slide__right {
   position: absolute;
@@ -121,6 +139,103 @@ nav .add-on .add-on__login li {
   left: 50px;
   top: 50%;
   z-index: 2;
+}
+.main-banner .main-banner__slide .slide__under-btn1,
+.main-banner .main-banner__slide .slide__under-btn2,
+.main-banner .main-banner__slide .slide__under-btn3 {
+  width: 15px;
+  height: 5px;
+  background-color: #ccc;
+}
+.main-banner .main-banner__slide .slide__under-btn1:hover,
+.main-banner .main-banner__slide .slide__under-btn2:hover,
+.main-banner .main-banner__slide .slide__under-btn3:hover {
+  background-color: black;
+}
+.main-banner .main-banner__slide .slide__under-bundle {
+  display: flex;
+  justify-content: space-between;
+  width: 55px;
+  position: absolute;
+  z-index: 3;
+  top: 300px;
+  left: 45%;
+}
+
+.sub-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.sub-menu .sub-menu__more {
+  background-color: green;
+  height: 100px;
+}
+.sub-menu .divBox {
+  width: 1200px;
+  background-color: red;
+  display: flex;
+  justify-content: space-around;
+}
+.sub-menu .img__more {
+  width: 200px;
+  height: 200px;
+}
+
+.issue-banner {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.issue-banner .arrow__left,
+.issue-banner .arrow__right {
+  size: 30px;
+  position: absolute;
+  top: 50%;
+  z-index: 1;
+}
+.issue-banner .arrow__left {
+  left: 17%;
+}
+.issue-banner .arrow__right {
+  left: 81%;
+}
+.issue-banner .issue-banner__title {
+  align-self: flex-start;
+}
+.issue-banner .issue-banner__slide {
+  padding-top: 30px;
+  border: 1px solid #ccc;
+  overflow: hidden;
+  width: 1260px;
+  height: 300px;
+  position: relative;
+}
+.issue-banner .issue-bundle {
+  position: absolute;
+  left: -225px;
+  display: flex;
+  justify-content: center;
+}
+.issue-banner .issue-list {
+  padding: 22px;
+}
+.issue-banner .issue-list:nth-child(1),
+.issue-banner .issue-list:nth-child(2) {
+  display: none;
+}
+.issue-banner .img__img {
+  width: 200px;
+  height: 200px;
+}
+.issue-banner .issue-bundle.right {
+  transform: translate3d(245px, 0, 0);
+  transition: transform 0.5s;
+}
+.issue-banner .issue-bundle.left {
+  transform: translate3d(-245px, 0, 0);
+  transition: transform 0.5s;
 }
 
 /*# sourceMappingURL=style.css.map */
